{
    "name": "InputControls",
    "maps": [
        {
            "name": "Player",
            "id": "9e77e590-e508-45d5-936a-de8720c96c1a",
            "actions": [
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "fe4d6fac-4ec0-4d06-a76e-b1d91dcdb80b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shot",
                    "type": "Button",
                    "id": "59055957-d1a3-4c34-84ca-8a5a3e47f29b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Laser",
                    "type": "Button",
                    "id": "ed423c1f-6f52-4221-96da-64b03808ff45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "xAxis",
                    "type": "Value",
                    "id": "2d5f793d-38d2-42a6-9472-934731e8e8ed",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0de6f157-b9c8-4a7b-922c-056f9c6ca5b7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81dfb749-3737-4878-9aed-d8a7b2351dc8",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31c87e9e-14ef-4189-83e2-aa0db176c0f0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "834aee9a-2bda-4e04-921a-7b0d51056805",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Laser",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "ebef0aa6-75f4-48f6-88aa-586743fd0272",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "xAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c83a169e-f49c-4441-8d0e-21421db0dee4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "xAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0479190c-4e06-4e6e-97b4-ae8a9c8ede90",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "xAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "a1d9bf10-34f2-42b0-b867-25dc9b8e8f4d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "xAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "70fdec02-acb7-4786-bef7-da72ec5ff832",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "xAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0c461d86-c76c-4642-a6e4-07b92e4d71d6",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "xAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "World",
            "id": "fe666677-a2a9-46f6-ab25-32aa53d68d27",
            "actions": [
                {
                    "name": "ChangeViewState",
                    "type": "Button",
                    "id": "bddd8a19-ab2d-4548-9ca4-5cdf158b5390",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e1264e9a-b74d-4e45-9f4f-dcd7d87f9ad7",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeViewState",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": []
        }
    ]
}